--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,100 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #35363a;
+  color: white;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.title {
+  text-align: center;
+}
+
+#logo {
+  margin-top: 10px;
+  width: 80px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+
+.main {
+  width: 500px;
+  margin: 0 auto;
+  background: white;
+  border-radius: 5px;
+  height: 450px;
+  margin-top: 50px;
+  position: relative;
+}
+
+form#msgbox {
+  position: absolute;
+  bottom: 0;
+  padding: 11px 20px;
+  display: flex;
+  width: 100%;
+}
+
+form#msgbox input {
+  width: 100%;
+  padding: 9px;
+  outline: none;
+}
+
+.messagebox {
+  padding: 10px;
+  margin: 10px;
+  width: fit-content;
+}
+
+.message_user {
+  margin-left: auto;
+  text-align: left !important;
+}
+
+.message_userCard {
+  background-color: rgb(66, 66, 252) !important;
+  color: white !important;
+}
+
+.message_questCard {
+  background-color: gainsboro;
+}
+
+.listMain {
+  position: absolute;
+  width: 100%;
+  height: 82%;
+  top: 14px;
+  overflow-y: scroll;
+}
+
+.MuiTypography-h5 {
+  font-size: 20px !important;
+}
+
+.MuiCardContent-root {
+  padding: 8px 20px !important;
 }
